# pysor

./: .gitignore  LICENSE  README.md  config.toml  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-package.yml
docs/source/: conf.py  index.rst  modules.rst  sensor_simulation.config.parsers.rst  sensor_simulation.config.rst  sensor_simulation.rst  sensor_simulation.sensors.rst  tests.config.rst  tests.rst  tests.sensors.rst
example/: example_aws_config.toml  main.py
sensor_simulation/: __init__.py  mqtt_client.py  sensor_manager.py
sensor_simulation/clients/: __init__.py  aws_mqtt_client.py  azure_mqtt_client.py  azure_token_generator.py  mqtt_client.py
sensor_simulation/config/: logger.py
sensor_simulation/config/parsers/: __init__.py  toml_parser.py
sensor_simulation/config_parser/: __init__.py  toml_parser.py
sensor_simulation/sensors/: __init__.py  base_sensor.py  humidity_sensor.py  light_intensity_sensor.py  ph_sensor.py  temperature_sensor.py  water_level_sensor.py
tests/: test_sensor_manager.py
tests/config/: test_parser.py
tests/sensors/: test_humidity_sensor.py  test_light_intensity_sensor.py  test_ph_sensor.py  test_temperature_sensor.py  test_water_level_sensor.py
