[tool.poetry]
name = "pysor"
version = "0.1.0"
description = "Python package for simulating sensors"
authors = ["Isai Ramirez <86127102+CodeSwallow@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
paho-mqtt = "^1.6.1"
toml = "^0.10.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
pytest-asyncio = "^0.21.0"
coverage = "^7.2.7"
coverage-badge = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
